Restart button and function completion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-md-1"></div>
             <!-- Jumbotron!!!! -->
             <div class="jumbotron tc-jumbotron col-md-10" id="jumbo">
-
+                <h1 style="font-size: .5em">Load Failure!!!</h1>
             </div>
         </div>
     </div>
